[package]
name = "torscaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
nom = "7"
phf = { version = "0.10", features = ["macros"] }
thiserror = "1.0"
derive_builder = "0.10.2"
chrono = "0.4"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
base64 = "0.13.0"
sha1 = "0.10.1"