[package]
name = "torscaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
nom = "7"
phf = { version = "0.10", features = ["macros"] }
thiserror = "1.0"